# Mandi_Tracker

./: .gitignore  .replit  app.py  data_config.py  manifest.json  pyproject.toml  replit.md  scraper.py
.streamlit/: config.toml
MandiTracker/: app.py  github_actions_workflow.yml  scraper.py
MandiTracker/.streamlit/: config.toml
api/: recommendations.py
archived_streamlit/: app.py  data_config.py  price_history.py
nextjs-app/: DATABASE_SETUP.md  DEPLOYMENT.md  README.md  package-lock.json  package.json  vercel.json
nextjs-app/app/: layout.tsx  page.tsx
nextjs-app/components/: CommodityDetail.tsx  OnboardingScreen.tsx  PriceDisplay.tsx
nextjs-app/data/: states.json  translations.json  user-commodity-history.json
nextjs-app/data/price-history/: haryana_ambala_apple.json  haryana_ambala_banana.json  haryana_ambala_bottle_gourd.json  haryana_gurgaon_brinjal.json  haryana_gurugram_apple.json  haryana_gurugram_brinjal.json  haryana_gurugram_capsicum.json  haryana_gurugram_carrot.json  haryana_gurugram_cucumbar_kheera_.json  haryana_gurugram_green_chilli.json  haryana_gurugram_leafy_vegetable.json  haryana_gurugram_onion.json  haryana_gurugram_onion_green.json  haryana_gurugram_orange.json  haryana_gurugram_peas_cod.json  haryana_gurugram_potato.json  haryana_gurugram_ridgeguard_tori_.json  haryana_gurugram_sweet_potato.json  haryana_gurugram_tomato.json  haryana_hisar_banana.json  haryana_hisar_bitter_gourd.json  (+145 more)
nextjs-app/lib/: db.ts  hindiNames.ts  priceHistory.ts  store.ts  userHistory.ts
nextjs-app/scripts/: generate-history.js
(+7 files in other folders)
