[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "streamlit>=1.51.0",
    "streamlit-tailwind>=0.1.0",
    "trafilatura>=2.0.0",
]
